= v0.5.14 - EDGE
* bug fix
  * fields configurator wouldn't open in some cases

= v0.5.13 - 2010-08-11
* regression
  * combobox options configuration again has effect
  
* bug fix
  * when a TabPanel was used as a standalone widget, the first tab was rendered empty
  * Grid/FormPanel: dynamically changing of columns doesn't erase those column settings that are not configurable via GUI, but which were specified in the code
  
* enhancements
  * scopes can now be specified for an association combobox in Grid/FormPanels
  * GridPanel: you can now configure add/edit/multi_edit/search panels (e.g. to override the fields) and corresponding windows (e.g. to override the title)
  * minor refactoring GridPanel: moved static js out of grid_panel_js.rb

= v0.5.12 - 2010-06-21
* Fix: when used with Bundler, was crashing with the "uninitialized constant" exception

= v0.5.11 - 2010-06-20
* Fix: Partial fix for IE's (the rest to be fixed in Ext).
* Fix: In some circumstances Netzke::ActiveRecord modules were not loading.

= v0.5.10 - 2010-06-14
* Impr: Checkbox replaced with tri-state checkbox in multi-edit form in GridPanel.
* Impr: Column renderers reworked, allowing for more flexibility and cleanness.
* Fix:  After applying changes to a grid disable "Edit in form" action.
* Impr: A grid's forms are now getting the same fields as specified for the grid.

= v0.5.9 - 2010-06-11
* !!!: after updating to this version, run script/generate netzke_basepack
* New: tri-state checkbox introduced into the search form
* Impr: better defaults for the search form
* Impr: GridPanel now displays the total amount of records
* Fix: GridPanel's "local filters" are back (they were out since the release of Ext 3.0)
* Impr: obey "preloaded" option for tabs better: really add the widgets into their respective tabs from the start
* Fix: datetime filters now also are take into account when searching in GridPanel is performed
* Fix: FieldsConfigurator should now work on Heroku