@@ -2,6 +2,9 @@
 * bug fix
   * fields configurator wouldn't open in some cases
 
+* enhancements
+  * combobox options can now be searched also in virtual columns (not efficient though!)
+
 = v0.5.13 - 2010-08-11
 * regression
   * combobox options configuration again has effect
